--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
+.task .x-grid-cell-inner {
+    padding-left: 15px;
+}
+
+.x-grid-row-summary .x-grid-cell-inner {
+    font-weight: bold;
+    font-size: 11px;
+}
+
+.icon-grid {
+    background: url(../icons/fam/grid.png) no-repeat 0 -1px;
+}
+
+
+
 .icon-user {
     background-image: url(../images/user.png) !important;
 }
